--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.25",
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
