--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-VITE_HOST=http://localhost:5301
-VITE_PUBLIC_PATH=/index
+VITE_HOST=http://120.24.43.205/hawk-api
+VITE_PUBLIC_PATH=/hawk-admin/
+VITE_ROUTE_MODE=hash
