--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,7 +24,7 @@ jobs:
       
       # 打包
       - name : build
-        run : npm run build
+        run : npm run build:prod
       
       # 部署到服务器
       - name: deploy file to server
