--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build:
-    runs-on : ubuntu-latest
+    runs-on : ubuntu-18.04
     name: build&deploy
     steps:
       # 复制当前文件夹文件
