--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vuedx-typecheck . && vite build",
-    "build:prod":"vuedx-typecheck . && vite build --mode production --base=/hawk-admin/",
+    "build:prod":"vite build --mode production --base=/hawk-admin/",
     "serve": "vite preview"
   },
   "dependencies": {
