--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vuedx-typecheck . && vite build",
-    "build:prod":"vite build --mode production --base=/hawk-admin/",
+    "build:prod":"vuedx-typecheck . && vite build --mode production --base=/hawk-admin/",
     "serve": "vite preview"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "element-plus": "^1.0.2-beta.31",
+    "element-plus": "^1.0.1-beta.27",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
