--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vuedx-typecheck . && vite build",
-    "build:prod":"vuedx-typecheck . && vite build --mode production --base=/hawk-admin/",
+    "build:prod": "vuedx-typecheck . && vite build --mode production --base=/hawk-admin/",
     "serve": "vite preview"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "element-plus": "^1.0.1-beta.27",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.3",
+    "vue": "3.0.7",
+    "vue-router": "^4.0.10",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -22,6 +22,6 @@
     "@vuedx/typescript-plugin-vue": "^0.6.0",
     "sass": "1.32.12",
     "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.50"
+    "vite": "^2.3.8"
   }
 }
