--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^0.21.1",
-    "element-plus": "^1.0.1-beta.27",
-    "vue": "3.0.7",
-    "vue-router": "^4.0.10",
+    "element-plus": "^2.3.3",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.25",
-    "@vitejs/plugin-vue": "^1.1.2",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@types/node": "^18.14.2",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/compiler-sfc": "^3.2.47",
+    "@vue/tsconfig": "^0.1.3",
     "@vuedx/typecheck": "^0.6.0",
-    "@vuedx/typescript-plugin-vue": "^0.6.0",
-    "sass": "1.32.12",
-    "typescript": "^4.1.3",
-    "vite": "^2.3.8"
+    "@vuedx/typescript-plugin-vue": "^0.7.6",
+    "sass": "^1.62.0",
+    "typescript": "~4.8.4",
+    "vite": "^4.1.4",
+    "vue-tsc": "^1.2.0"
   }
 }
