--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^0.21.1",
     "element-plus": "^2.3.3",
+    "pinia": "^2.0.34",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.0"
